# flite-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/: basic_use.rs
src/: error.rs  lib.rs  model.rs  output_kind.rs  voice.rs  wave_sample.rs
sys/: Cargo.toml  build.rs  wrapper.h
sys/src/: bindings.rs
